peac_dev/force-app/main/default/objects/PEAC_GDS_End_Points__mdt/PEAC_GDS_End_Points__mdt.object-meta.xml
<CustomObject>
    <description>Store GDS end points for loan and lease apps</description>
    <label>GDS Endpoints</label>
    <pluralLabel>GDS Endpoints</pluralLabel>
</CustomObject>