peac_dev/force-app/main/default/objects/PEAC_GDS_End_Points__mdt/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <description>Store GDS call type</description>
    <label>CallType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
                <default>true</default>
                <label>SF</label>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>Ocrolus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>