peac_dev/force-app/main/default/objects/PEAC_GDS_End_Points__mdt/fields/Is_Loan__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for loan</description>
    <label>Is Loan</label>
    <type>Checkbox</type>
</CustomField>