peac_dev/force-app/main/default/objects/PEAC_GDS_End_Points__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CallType__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Is_Loan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>